# dari

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  release.yml
deploy/: com.koriel.dari.plist  com.koriel.telegram-translator-bot.plist
docs/superpowers/plans/: 2026-03-17-telegram-translator-bot.plan
src/: __main__.py  bot.py  config.py  quotes.py  storage.py  transcriber.py  translator.py
tests/: test_bot.py  test_config.py  test_storage.py  test_translator.py
