[project]
name = "dari"
version = "1.0.0"
description = "다리 (Dari) — Real-time Telegram translation bot powered by Claude Haiku"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot[job-queue,webhooks]>=22.5",
    "anthropic>=0.52.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
